// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilSystem.copyChild 0 1`] = `null`;

exports[`FilSystem.copyChild 1 1`] = `null`;

exports[`FilSystem.copyChild 2 1`] = `null`;

exports[`FilSystem.copyChild 3 1`] = `null`;

exports[`FilSystem.copyChild 4 1`] = `null`;

exports[`FilSystem.copyChild 5 1`] = `null`;

exports[`FilSystem.findItem 0 1`] = `null`;

exports[`FilSystem.findItem 1 1`] = `null`;

exports[`FilSystem.findItem 2 1`] = `null`;

exports[`FilSystem.findItem 3 1`] = `null`;

exports[`FilSystem.findItem 4 1`] = `null`;

exports[`FilSystem.findItem FilSystem.findAllItems 0 1`] = `Array []`;

exports[`FilSystem.findItem FilSystem.findAllItems 1 1`] = `Array []`;

exports[`FilSystem.findItem FilSystem.findAllItems 2 1`] = `Array []`;

exports[`FilSystem.findItem FilSystem.findAllItems 3 1`] = `Array []`;

exports[`FilSystem.findItem FilSystem.findAllItems 4 1`] = `Array []`;

exports[`FilSystem.findItem FilSystem.findAllItems FilSystem.fuzzySearch 0 1`] = `Array []`;

exports[`FilSystem.findItem FilSystem.findAllItems FilSystem.fuzzySearch 1 1`] = `Array []`;

exports[`FilSystem.findItem FilSystem.findAllItems FilSystem.fuzzySearch 2 1`] = `Array []`;

exports[`FilSystem.findItem FilSystem.findAllItems FilSystem.fuzzySearch 3 1`] = `Array []`;

exports[`FilSystem.findItem FilSystem.findAllItems FilSystem.fuzzySearch 4 1`] = `Array []`;

exports[`FilSystem.findItem FilSystem.findAllItems FilSystem.fuzzySearch 5 1`] = `Array []`;

exports[`FilSystem.findItem FilSystem.findAllItems FilSystem.setupAndFind 0 1`] = `null`;

exports[`FilSystem.findItem FilSystem.findAllItems FilSystem.setupAndFind 1 1`] = `null`;

exports[`FilSystem.findItem FilSystem.findAllItems FilSystem.setupAndFind 2 1`] = `Array []`;

exports[`FilSystem.findItem FilSystem.findAllItems FilSystem.setupAndFind 3 1`] = `null`;

exports[`FilSystem.findItem FilSystem.findAllItems FilSystem.setupAndFind 4 1`] = `null`;

exports[`FilSystem.findItem FilSystem.findAllItems FilSystem.setupAndFind FilSystem._findItem 0 1`] = `Array []`;

exports[`FilSystem.findItem FilSystem.findAllItems FilSystem.setupAndFind FilSystem._findItem 1 1`] = `null`;

exports[`FilSystem.findItem FilSystem.findAllItems FilSystem.setupAndFind FilSystem._findItem 2 1`] = `null`;

exports[`FilSystem.findItem FilSystem.findAllItems FilSystem.setupAndFind FilSystem._findItem 3 1`] = `Array []`;

exports[`FilSystem.findItem FilSystem.findAllItems FilSystem.setupAndFind FilSystem._findItem 4 1`] = `Array []`;

exports[`FilSystem.getChild 0 1`] = `null`;

exports[`FilSystem.getChild 1 1`] = `null`;

exports[`FilSystem.getChild 2 1`] = `null`;

exports[`FilSystem.getChild 3 1`] = `null`;

exports[`FilSystem.getChild 4 1`] = `null`;

exports[`FilSystem.getChild 5 1`] = `null`;

exports[`FilSystem.goBack 0 1`] = `null`;

exports[`FilSystem.goBack 1 1`] = `null`;

exports[`FilSystem.goBack 2 1`] = `null`;

exports[`FilSystem.goBack 3 1`] = `null`;

exports[`FilSystem.goBack 4 1`] = `null`;

exports[`FilSystem.goBack 5 1`] = `null`;

exports[`FilSystem.goBackToDirectory 0 1`] = `null`;

exports[`FilSystem.goBackToDirectory 1 1`] = `null`;

exports[`FilSystem.goBackToDirectory 2 1`] = `null`;

exports[`FilSystem.goBackToDirectory 3 1`] = `null`;

exports[`FilSystem.goBackToDirectory 4 1`] = `null`;

exports[`FilSystem.goBackToDirectory 5 1`] = `null`;

exports[`FilSystem.hasChild 0 1`] = `false`;

exports[`FilSystem.hasChild 1 1`] = `false`;

exports[`FilSystem.hasChild 2 1`] = `false`;

exports[`FilSystem.hasChild 3 1`] = `false`;

exports[`FilSystem.hasChild 4 1`] = `false`;

exports[`FilSystem.hasChild 5 1`] = `false`;

exports[`FilSystem.openDirectory 0 1`] = `null`;

exports[`FilSystem.openDirectory 1 1`] = `null`;

exports[`FilSystem.openDirectory 2 1`] = `null`;

exports[`FilSystem.openDirectory 3 1`] = `null`;

exports[`FilSystem.openDirectory 4 1`] = `null`;

exports[`FilSystem.removeChild 0 1`] = `false`;

exports[`FilSystem.removeChild 1 1`] = `false`;

exports[`FilSystem.removeChild 2 1`] = `false`;

exports[`FilSystem.removeChild 3 1`] = `false`;

exports[`FilSystem.removeChild 4 1`] = `false`;

exports[`FilSystem.removeChild 5 1`] = `false`;

exports[`FilSystem.renameChild 0 1`] = `null`;

exports[`FilSystem.renameChild 1 1`] = `null`;

exports[`FilSystem.renameChild 2 1`] = `null`;

exports[`FilSystem.renameChild 3 1`] = `null`;

exports[`FilSystem.renameChild 4 1`] = `null`;

exports[`FilSystem.renameChild 5 1`] = `null`;

exports[`Test FilSystem Correctly returns filesystem content 1`] = `
Array [
  Directory {
    "_children": Map {},
    "_id": "testid",
    "_liked": false,
    "_modified": 1645617999076,
    "_name": "Test Directory",
    "_parent": Directory {
      "_children": Map {
        "test directory" => [Circular],
        "test directory copy" => Directory {
          "_children": Map {},
          "_id": "testid",
          "_liked": false,
          "_modified": 1645617999076,
          "_name": "Test Directory copy",
          "_parent": [Circular],
          "_shared": false,
          "_type": "DEFAULT",
        },
        "second dir" => Directory {
          "_children": Map {
            "testfile.png" => Fil {
              "_description": "Test file description",
              "_extension": "png",
              "_id": "testid",
              "_liked": false,
              "_modified": 1645617999076,
              "_name": "TestFile.png",
              "_parent": [Circular],
              "_shared": false,
              "_size": 4337487,
              "_thumbnail": "",
              "_type": "generic",
            },
            "testpng2.png" => Fil {
              "_description": "Test file description",
              "_extension": "png",
              "_id": "testid",
              "_liked": false,
              "_modified": 1645617999076,
              "_name": "testPng2.png",
              "_parent": [Circular],
              "_shared": false,
              "_size": 4337487,
              "_thumbnail": "",
              "_type": "generic",
            },
            "abc.png" => Fil {
              "_description": "Test file description",
              "_extension": "png",
              "_id": "testid",
              "_liked": false,
              "_modified": 1645617999076,
              "_name": "abc.png",
              "_parent": [Circular],
              "_shared": false,
              "_size": 4337487,
              "_thumbnail": "",
              "_type": "generic",
            },
            "cc123.png" => Fil {
              "_description": "Test file description",
              "_extension": "png",
              "_id": "testid",
              "_liked": false,
              "_modified": 1645617999076,
              "_name": "cc123.png",
              "_parent": [Circular],
              "_shared": false,
              "_size": 4337487,
              "_thumbnail": "",
              "_type": "generic",
            },
          },
          "_id": "testid",
          "_liked": false,
          "_modified": 1645617999076,
          "_name": "second dir",
          "_parent": [Circular],
          "_shared": false,
          "_type": "DEFAULT",
        },
        "third dir" => Directory {
          "_children": Map {},
          "_id": "testid",
          "_liked": false,
          "_modified": 1645617999076,
          "_name": "third dir",
          "_parent": [Circular],
          "_shared": false,
          "_type": "DEFAULT",
        },
      },
      "_id": "testid",
      "_liked": false,
      "_modified": 1645617999076,
      "_name": "root",
      "_parent": null,
      "_shared": false,
      "_type": "DEFAULT",
    },
    "_shared": false,
    "_type": "DEFAULT",
  },
  Directory {
    "_children": Map {},
    "_id": "testid",
    "_liked": false,
    "_modified": 1645617999076,
    "_name": "Test Directory copy",
    "_parent": Directory {
      "_children": Map {
        "test directory" => Directory {
          "_children": Map {},
          "_id": "testid",
          "_liked": false,
          "_modified": 1645617999076,
          "_name": "Test Directory",
          "_parent": [Circular],
          "_shared": false,
          "_type": "DEFAULT",
        },
        "test directory copy" => [Circular],
        "second dir" => Directory {
          "_children": Map {
            "testfile.png" => Fil {
              "_description": "Test file description",
              "_extension": "png",
              "_id": "testid",
              "_liked": false,
              "_modified": 1645617999076,
              "_name": "TestFile.png",
              "_parent": [Circular],
              "_shared": false,
              "_size": 4337487,
              "_thumbnail": "",
              "_type": "generic",
            },
            "testpng2.png" => Fil {
              "_description": "Test file description",
              "_extension": "png",
              "_id": "testid",
              "_liked": false,
              "_modified": 1645617999076,
              "_name": "testPng2.png",
              "_parent": [Circular],
              "_shared": false,
              "_size": 4337487,
              "_thumbnail": "",
              "_type": "generic",
            },
            "abc.png" => Fil {
              "_description": "Test file description",
              "_extension": "png",
              "_id": "testid",
              "_liked": false,
              "_modified": 1645617999076,
              "_name": "abc.png",
              "_parent": [Circular],
              "_shared": false,
              "_size": 4337487,
              "_thumbnail": "",
              "_type": "generic",
            },
            "cc123.png" => Fil {
              "_description": "Test file description",
              "_extension": "png",
              "_id": "testid",
              "_liked": false,
              "_modified": 1645617999076,
              "_name": "cc123.png",
              "_parent": [Circular],
              "_shared": false,
              "_size": 4337487,
              "_thumbnail": "",
              "_type": "generic",
            },
          },
          "_id": "testid",
          "_liked": false,
          "_modified": 1645617999076,
          "_name": "second dir",
          "_parent": [Circular],
          "_shared": false,
          "_type": "DEFAULT",
        },
        "third dir" => Directory {
          "_children": Map {},
          "_id": "testid",
          "_liked": false,
          "_modified": 1645617999076,
          "_name": "third dir",
          "_parent": [Circular],
          "_shared": false,
          "_type": "DEFAULT",
        },
      },
      "_id": "testid",
      "_liked": false,
      "_modified": 1645617999076,
      "_name": "root",
      "_parent": null,
      "_shared": false,
      "_type": "DEFAULT",
    },
    "_shared": false,
    "_type": "DEFAULT",
  },
  Directory {
    "_children": Map {
      "testfile.png" => Fil {
        "_description": "Test file description",
        "_extension": "png",
        "_id": "testid",
        "_liked": false,
        "_modified": 1645617999076,
        "_name": "TestFile.png",
        "_parent": [Circular],
        "_shared": false,
        "_size": 4337487,
        "_thumbnail": "",
        "_type": "generic",
      },
      "testpng2.png" => Fil {
        "_description": "Test file description",
        "_extension": "png",
        "_id": "testid",
        "_liked": false,
        "_modified": 1645617999076,
        "_name": "testPng2.png",
        "_parent": [Circular],
        "_shared": false,
        "_size": 4337487,
        "_thumbnail": "",
        "_type": "generic",
      },
      "abc.png" => Fil {
        "_description": "Test file description",
        "_extension": "png",
        "_id": "testid",
        "_liked": false,
        "_modified": 1645617999076,
        "_name": "abc.png",
        "_parent": [Circular],
        "_shared": false,
        "_size": 4337487,
        "_thumbnail": "",
        "_type": "generic",
      },
      "cc123.png" => Fil {
        "_description": "Test file description",
        "_extension": "png",
        "_id": "testid",
        "_liked": false,
        "_modified": 1645617999076,
        "_name": "cc123.png",
        "_parent": [Circular],
        "_shared": false,
        "_size": 4337487,
        "_thumbnail": "",
        "_type": "generic",
      },
    },
    "_id": "testid",
    "_liked": false,
    "_modified": 1645617999076,
    "_name": "second dir",
    "_parent": Directory {
      "_children": Map {
        "test directory" => Directory {
          "_children": Map {},
          "_id": "testid",
          "_liked": false,
          "_modified": 1645617999076,
          "_name": "Test Directory",
          "_parent": [Circular],
          "_shared": false,
          "_type": "DEFAULT",
        },
        "test directory copy" => Directory {
          "_children": Map {},
          "_id": "testid",
          "_liked": false,
          "_modified": 1645617999076,
          "_name": "Test Directory copy",
          "_parent": [Circular],
          "_shared": false,
          "_type": "DEFAULT",
        },
        "second dir" => [Circular],
        "third dir" => Directory {
          "_children": Map {},
          "_id": "testid",
          "_liked": false,
          "_modified": 1645617999076,
          "_name": "third dir",
          "_parent": [Circular],
          "_shared": false,
          "_type": "DEFAULT",
        },
      },
      "_id": "testid",
      "_liked": false,
      "_modified": 1645617999076,
      "_name": "root",
      "_parent": null,
      "_shared": false,
      "_type": "DEFAULT",
    },
    "_shared": false,
    "_type": "DEFAULT",
  },
  Directory {
    "_children": Map {},
    "_id": "testid",
    "_liked": false,
    "_modified": 1645617999076,
    "_name": "third dir",
    "_parent": Directory {
      "_children": Map {
        "test directory" => Directory {
          "_children": Map {},
          "_id": "testid",
          "_liked": false,
          "_modified": 1645617999076,
          "_name": "Test Directory",
          "_parent": [Circular],
          "_shared": false,
          "_type": "DEFAULT",
        },
        "test directory copy" => Directory {
          "_children": Map {},
          "_id": "testid",
          "_liked": false,
          "_modified": 1645617999076,
          "_name": "Test Directory copy",
          "_parent": [Circular],
          "_shared": false,
          "_type": "DEFAULT",
        },
        "second dir" => Directory {
          "_children": Map {
            "testfile.png" => Fil {
              "_description": "Test file description",
              "_extension": "png",
              "_id": "testid",
              "_liked": false,
              "_modified": 1645617999076,
              "_name": "TestFile.png",
              "_parent": [Circular],
              "_shared": false,
              "_size": 4337487,
              "_thumbnail": "",
              "_type": "generic",
            },
            "testpng2.png" => Fil {
              "_description": "Test file description",
              "_extension": "png",
              "_id": "testid",
              "_liked": false,
              "_modified": 1645617999076,
              "_name": "testPng2.png",
              "_parent": [Circular],
              "_shared": false,
              "_size": 4337487,
              "_thumbnail": "",
              "_type": "generic",
            },
            "abc.png" => Fil {
              "_description": "Test file description",
              "_extension": "png",
              "_id": "testid",
              "_liked": false,
              "_modified": 1645617999076,
              "_name": "abc.png",
              "_parent": [Circular],
              "_shared": false,
              "_size": 4337487,
              "_thumbnail": "",
              "_type": "generic",
            },
            "cc123.png" => Fil {
              "_description": "Test file description",
              "_extension": "png",
              "_id": "testid",
              "_liked": false,
              "_modified": 1645617999076,
              "_name": "cc123.png",
              "_parent": [Circular],
              "_shared": false,
              "_size": 4337487,
              "_thumbnail": "",
              "_type": "generic",
            },
          },
          "_id": "testid",
          "_liked": false,
          "_modified": 1645617999076,
          "_name": "second dir",
          "_parent": [Circular],
          "_shared": false,
          "_type": "DEFAULT",
        },
        "third dir" => [Circular],
      },
      "_id": "testid",
      "_liked": false,
      "_modified": 1645617999076,
      "_name": "root",
      "_parent": null,
      "_shared": false,
      "_type": "DEFAULT",
    },
    "_shared": false,
    "_type": "DEFAULT",
  },
]
`;

exports[`Test FilSystem Move item to a directory 1`] = `
FilSystem {
  "_currentDirectory": Directory {
    "_children": Map {
      "test directory" => Directory {
        "_children": Map {},
        "_id": "testid",
        "_liked": false,
        "_modified": 1645617999076,
        "_name": "Test Directory",
        "_parent": [Circular],
        "_shared": false,
        "_type": "DEFAULT",
      },
      "test directory copy" => Directory {
        "_children": Map {},
        "_id": "testid",
        "_liked": false,
        "_modified": 1645617999076,
        "_name": "Test Directory copy",
        "_parent": [Circular],
        "_shared": false,
        "_type": "DEFAULT",
      },
      "second dir" => Directory {
        "_children": Map {
          "testfile.png" => Fil {
            "_description": "Test file description",
            "_extension": "png",
            "_id": "testid",
            "_liked": false,
            "_modified": 1645617999076,
            "_name": "TestFile.png",
            "_parent": [Circular],
            "_shared": false,
            "_size": 4337487,
            "_thumbnail": "",
            "_type": "generic",
          },
          "testpng2.png" => Fil {
            "_description": "Test file description",
            "_extension": "png",
            "_id": "testid",
            "_liked": false,
            "_modified": 1645617999076,
            "_name": "testPng2.png",
            "_parent": [Circular],
            "_shared": false,
            "_size": 4337487,
            "_thumbnail": "",
            "_type": "generic",
          },
          "abc.png" => Fil {
            "_description": "Test file description",
            "_extension": "png",
            "_id": "testid",
            "_liked": false,
            "_modified": 1645617999076,
            "_name": "abc.png",
            "_parent": [Circular],
            "_shared": false,
            "_size": 4337487,
            "_thumbnail": "",
            "_type": "generic",
          },
          "cc123.png" => Fil {
            "_description": "Test file description",
            "_extension": "png",
            "_id": "testid",
            "_liked": false,
            "_modified": 1645617999076,
            "_name": "cc123.png",
            "_parent": [Circular],
            "_shared": false,
            "_size": 4337487,
            "_thumbnail": "",
            "_type": "generic",
          },
        },
        "_id": "testid",
        "_liked": false,
        "_modified": 1645617999076,
        "_name": "second dir",
        "_parent": [Circular],
        "_shared": false,
        "_type": "DEFAULT",
      },
      "third dir" => Directory {
        "_children": Map {},
        "_id": "testid",
        "_liked": false,
        "_modified": 1645617999076,
        "_name": "third dir",
        "_parent": [Circular],
        "_shared": false,
        "_type": "DEFAULT",
      },
    },
    "_id": "testid",
    "_liked": false,
    "_modified": 1645617999076,
    "_name": "root",
    "_parent": null,
    "_shared": false,
    "_type": "DEFAULT",
  },
  "_currentDirectoryPath": Array [
    Directory {
      "_children": Map {
        "test directory" => Directory {
          "_children": Map {},
          "_id": "testid",
          "_liked": false,
          "_modified": 1645617999076,
          "_name": "Test Directory",
          "_parent": [Circular],
          "_shared": false,
          "_type": "DEFAULT",
        },
        "test directory copy" => Directory {
          "_children": Map {},
          "_id": "testid",
          "_liked": false,
          "_modified": 1645617999076,
          "_name": "Test Directory copy",
          "_parent": [Circular],
          "_shared": false,
          "_type": "DEFAULT",
        },
        "second dir" => Directory {
          "_children": Map {
            "testfile.png" => Fil {
              "_description": "Test file description",
              "_extension": "png",
              "_id": "testid",
              "_liked": false,
              "_modified": 1645617999076,
              "_name": "TestFile.png",
              "_parent": [Circular],
              "_shared": false,
              "_size": 4337487,
              "_thumbnail": "",
              "_type": "generic",
            },
            "testpng2.png" => Fil {
              "_description": "Test file description",
              "_extension": "png",
              "_id": "testid",
              "_liked": false,
              "_modified": 1645617999076,
              "_name": "testPng2.png",
              "_parent": [Circular],
              "_shared": false,
              "_size": 4337487,
              "_thumbnail": "",
              "_type": "generic",
            },
            "abc.png" => Fil {
              "_description": "Test file description",
              "_extension": "png",
              "_id": "testid",
              "_liked": false,
              "_modified": 1645617999076,
              "_name": "abc.png",
              "_parent": [Circular],
              "_shared": false,
              "_size": 4337487,
              "_thumbnail": "",
              "_type": "generic",
            },
            "cc123.png" => Fil {
              "_description": "Test file description",
              "_extension": "png",
              "_id": "testid",
              "_liked": false,
              "_modified": 1645617999076,
              "_name": "cc123.png",
              "_parent": [Circular],
              "_shared": false,
              "_size": 4337487,
              "_thumbnail": "",
              "_type": "generic",
            },
          },
          "_id": "testid",
          "_liked": false,
          "_modified": 1645617999076,
          "_name": "second dir",
          "_parent": [Circular],
          "_shared": false,
          "_type": "DEFAULT",
        },
        "third dir" => Directory {
          "_children": Map {},
          "_id": "testid",
          "_liked": false,
          "_modified": 1645617999076,
          "_name": "third dir",
          "_parent": [Circular],
          "_shared": false,
          "_type": "DEFAULT",
        },
      },
      "_id": "testid",
      "_liked": false,
      "_modified": 1645617999076,
      "_name": "root",
      "_parent": null,
      "_shared": false,
      "_type": "DEFAULT",
    },
  ],
  "_self": Directory {
    "_children": Map {
      "test directory" => Directory {
        "_children": Map {},
        "_id": "testid",
        "_liked": false,
        "_modified": 1645617999076,
        "_name": "Test Directory",
        "_parent": [Circular],
        "_shared": false,
        "_type": "DEFAULT",
      },
      "test directory copy" => Directory {
        "_children": Map {},
        "_id": "testid",
        "_liked": false,
        "_modified": 1645617999076,
        "_name": "Test Directory copy",
        "_parent": [Circular],
        "_shared": false,
        "_type": "DEFAULT",
      },
      "second dir" => Directory {
        "_children": Map {
          "testfile.png" => Fil {
            "_description": "Test file description",
            "_extension": "png",
            "_id": "testid",
            "_liked": false,
            "_modified": 1645617999076,
            "_name": "TestFile.png",
            "_parent": [Circular],
            "_shared": false,
            "_size": 4337487,
            "_thumbnail": "",
            "_type": "generic",
          },
          "testpng2.png" => Fil {
            "_description": "Test file description",
            "_extension": "png",
            "_id": "testid",
            "_liked": false,
            "_modified": 1645617999076,
            "_name": "testPng2.png",
            "_parent": [Circular],
            "_shared": false,
            "_size": 4337487,
            "_thumbnail": "",
            "_type": "generic",
          },
          "abc.png" => Fil {
            "_description": "Test file description",
            "_extension": "png",
            "_id": "testid",
            "_liked": false,
            "_modified": 1645617999076,
            "_name": "abc.png",
            "_parent": [Circular],
            "_shared": false,
            "_size": 4337487,
            "_thumbnail": "",
            "_type": "generic",
          },
          "cc123.png" => Fil {
            "_description": "Test file description",
            "_extension": "png",
            "_id": "testid",
            "_liked": false,
            "_modified": 1645617999076,
            "_name": "cc123.png",
            "_parent": [Circular],
            "_shared": false,
            "_size": 4337487,
            "_thumbnail": "",
            "_type": "generic",
          },
        },
        "_id": "testid",
        "_liked": false,
        "_modified": 1645617999076,
        "_name": "second dir",
        "_parent": [Circular],
        "_shared": false,
        "_type": "DEFAULT",
      },
      "third dir" => Directory {
        "_children": Map {},
        "_id": "testid",
        "_liked": false,
        "_modified": 1645617999076,
        "_name": "third dir",
        "_parent": [Circular],
        "_shared": false,
        "_type": "DEFAULT",
      },
    },
    "_id": "testid",
    "_liked": false,
    "_modified": 1645617999076,
    "_name": "root",
    "_parent": null,
    "_shared": false,
    "_type": "DEFAULT",
  },
  "_version": 1,
}
`;

exports[`Test FilSystem Navigate to a directory 1`] = `null`;
